Implement user login with Spring Security authentication and JWT token generation